# mini_claw

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  init-db.sql
backend/: Dockerfile  README.md  alembic.ini  parser.py  pyproject.toml  sample_usage.md  skill_feishu_sheet_parser_README.md
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_feishu_open_id.py  003_add_messages_table.py  004_add_scheduled_jobs.py  40c0415476cf_add_conversations_table.py
backend/app/: config.py  database.py  main.py
backend/app/api/: admin.py  auth.py  bots.py  chat.py  conversations.py  scheduled_jobs.py  skills.py
backend/app/engine/: compaction.py  graph_builder.py  hooks.py  memory_flush.py  nodes.py  prompt_builder.py  state.py  tool_filter.py
backend/app/models/: __init__.py  bot.py  conversation.py  memory.py  message.py  scheduled_job.py  skill.py  tool.py  user.py
backend/app/schemas/: bot.py  chat.py  scheduled_job.py  skill.py
backend/app/services/: bot_service.py  delivery_service.py  dreaming_service.py  embedding_service.py  feishu_bitable_service.py  feishu_calendar_service.py  feishu_chat_service.py  feishu_client.py  feishu_doc_service.py  feishu_drive_service.py  feishu_perm_service.py  feishu_service.py  feishu_task_service.py  feishu_wiki_service.py  job_executor.py  memory_service.py  sandbox_pool.py  scheduler_service.py  seed_skills.py  skill_installer.py  skill_service.py
backend/app/tools/: feishu_tools.py  memory_tools.py  perplexity_tools.py  sandbox_tools.py  schedule_tools.py  skill_install_tools.py  web_tools.py
backend/tests/: test_business_scenarios.py  test_e2e_multiturn.py
backend/tests/test_api/: test_health.py  test_integration.py  test_message_save.py  test_scheduled_jobs.py
backend/tests/test_engine/: test_compaction.py  test_graph_builder.py  test_hooks.py  test_llm_integration.py  test_memory_flush.py  test_nodes.py  test_prompt_builder.py  test_prompt_cache.py  test_skill_tool_filter.py  test_state.py
backend/tests/test_services/: test_delivery_service.py  test_dreaming.py  test_embedding_service.py  test_feishu_client.py  test_feishu_doc_service.py  test_feishu_services.py  test_feishu_user_token.py  test_job_executor.py  test_memory_service_vector.py  test_sandbox_pool.py  test_scheduler_service.py  test_skill_installer.py  test_skill_service_enhanced.py
backend/tests/test_tools/: test_feishu_tools.py  test_feishu_user_token_tools.py  test_perplexity_tools.py  test_sandbox_tools.py  test_schedule_tools.py  test_skill_install_tools.py  test_web_tools.py
docs/: deployment.md  test-plan-business-scenarios.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
sandbox/: Dockerfile
(+15 files in other folders)
