[project]
name = "mclaw-backend"
version = "0.1.0"
description = "跨境电商 AI 助手平台后端"
requires-python = ">=3.10"
dependencies = [
    # Web 框架
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    # LangGraph + LangChain
    "langgraph>=0.4",
    "langgraph-checkpoint-postgres>=3.0",
    "langchain-core>=0.3",
    "langchain-litellm>=0.6",
    "langchain-openai>=0.3",
    # 流式协议 (assistant-ui 对接)
    "assistant-stream>=0.0.30",
    # 数据库
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.3",
    # 配置 & 工具
    "pydantic-settings>=2.7",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "httpx>=0.28",
    "redis>=5.0",
    "docker>=7.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
